# mass-nes

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: release.yml
crates/debugger/: Cargo.toml  build-web.sh  build.rs  build.sh
crates/debugger/.cargo/: config.toml
crates/debugger/src/: app.rs  audio.rs  cpu_6502.rs  debug_state.rs  gfx.rs  gl.rs  lib.rs  main.rs  platform.rs  runner.rs  spawner.rs
crates/debugger/src/widgets/: channel_viewer.rs  chr_tiles.rs  code_viewer.rs  event_viewer.rs  help.rs  memory.rs  messages.rs  mod.rs  movie_settings.rs  nametables.rs  palette_viewer.rs  popup_message.rs  recents.rs  screen.rs  sprite_viewer.rs  svg.rs  variable_viewer.rs  volume.rs
crates/debugger/static/: index.html  worker.js  worklet.js
crates/desktop/: Cargo.toml
crates/desktop/assets/: mdfourier4k.nes
crates/desktop/shaders/: ntsc_frag.glsl  paletted_frag.glsl  paletted_vert.glsl
crates/desktop/src/: app.rs  audio.rs  gfx.rs  main.rs  runner.rs  sync.rs
crates/desktop/src/ui/: gfx.rs  mod.rs  ntsc.rs  window.rs
crates/nes/: Cargo.toml
crates/nes-derive/: Cargo.toml
crates/nes-derive/src/: lib.rs
crates/nes-ntsc-rust/: Cargo.toml
crates/nes-ntsc-rust/src/: lib.rs
crates/nes-traits/: Cargo.toml
crates/nes-traits/src/: lib.rs
crates/nes/src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  debug.rs  input.rs  lib.rs  machine.rs  memory.rs  ops.rs  ppu.rs  ppu_step.rs  region.rs  ring_buf.rs  run_until.rs
crates/nes/src/channel/: dmc.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
crates/nes/src/cpu/: dma.rs  interrupts.rs  ops.rs  registers.rs
crates/nes/src/mapper/: action53.rs  axrom.rs  bf909x.rs  bxrom.rs  cnrom.rs  color_dreams.rs  exrom.rs  fds.rs  fme7.rs  game_genie.rs  gxrom.rs  j87.rs  mapper_031.rs  mmc1.rs  mmc2.rs  mmc3.rs  mmc5.rs  mod.rs  namco163.rs  namco175_340.rs  nina001.rs  nina006.rs  nrom.rs  nsf.rs  pxrom.rs  rainbow.rs  sxrom.rs  txrom.rs  uxrom.rs  vrc4.rs  vrc6.rs  vrc7.rs  vrc_irq.rs
crates/nes/src/mapper/nsf_player/: ascii-by-jroatch.chr  ascii.chr  nsf_player.asm  nsf_player.cfg
crates/nes/tests/: blargg_apu_2005.rs  blargg_ppu_tests_2005.rs  cpu_interrupts_v2.rs  helper.rs  nestest.rs  ppu_vbl_nmi.rs  rom_tests.rs  sprite_hit_tests_2005.rs  sprite_overflow_tests.rs
crates/nes/tests/data/AccuracyCoin/: AccuracyCoin.asm  AccuracyCoin.fns  AccuracyCoin.nes  README.md  Sprites.pcx  Tiles.pcx
crates/nes/tests/roms/: accuracy_coin.rs  apu_test.rs  blargg_apu_2005.rs  blargg_ppu_tests_2005.rs  branch_timing_tests.rs  cpu_dummy_reads.rs  cpu_interrupts_v2.rs  cpu_timing_test6.rs  instr_misc.rs  instr_test_v5.rs  mmc3_test_2.rs  mod.rs  nestest.rs  oam_read.rs  oam_stress.rs  pal_apu_tests.rs  ppu_open_bus.rs  ppu_vbl_nmi.rs  sprdma_and_dmc_dma.rs  sprite_hit_tests_2005.rs  sprite_overflow_tests.rs
crates/nes_ntsc/: Cargo.toml
crates/nes_ntsc-c2rust/: Cargo.toml
crates/nes_ntsc-c2rust/src/: lib.rs  nes_ntsc.rs
crates/nes_ntsc-sys/: Cargo.toml  build.rs
crates/nes_ntsc-sys/src/: lib.rs
crates/nes_ntsc/src/: lib.rs
crates/svg-tessellator/: Cargo.toml
crates/svg-tessellator/src/: lib.rs
crates/tracy-ext/: Cargo.toml
crates/tracy-ext/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/shaders/: crt.glsl  ntsc.glsl  ntsc_frag.glsl  ntsc_vert.glsl  paletted.glsl  paletted_frag.glsl  prelude_gl.glsl  prelude_webgl.glsl  svg.glsl  textured_quad.glsl
crates/ui/src/: audio.rs  fm2.rs  gamepad.rs  input.rs  lib.rs  movie.rs  sync.rs  wav_writer.rs  wram.rs
crates/ui/src/audio/: browser.rs  cpal.rs  jack.rs  null.rs  pipewire.rs
crates/ui/src/filters/: crt.rs  mod.rs  ntsc.rs  paletted.rs  preprocessor.rs
crates/web/: .gitignore  Cargo.toml  build.rs  build.sh  rust-toolchain.toml
crates/web-worker/: Cargo.toml
crates/web-worker/src/: lib.rs
crates/web/.cargo/: config.toml
crates/web/shaders/: ntsc_frag.glsl  ntsc_vert.glsl  paletted_frag.glsl
crates/web/src/: app.rs  audio.rs  gfx.rs  gfx_worker.rs  gl.rs  lib.rs  machine_worker.rs  offscreen_gfx.rs  runner.rs  sync.rs  window.rs  worker.rs
crates/web/static/: index.html  worker.js  worker_gfx.js  worklet.js
nes/: Cargo.toml
nes/src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  debug.rs  input.rs  lib.rs  machine.rs  memory.rs  ops.rs  ppu.rs  ppu_step.rs  system.rs
nes/src/channel/: dmc.rs  noise.rs  pulse.rs  triangle.rs
nes/src/mapper/: action53.rs  axrom.rs  bf909x.rs  cnrom.rs  fme7.rs  mod.rs  nrom.rs  pxrom.rs  sxrom.rs  txrom.rs  uxrom.rs
nes/tests/: branch_timing_tests.rs  cpu_timing_test6.rs  nestest.rs  sprite_overflow_tests.rs
nes/tests/helper/: mod.rs
nes_ntsc/: Cargo.toml
nes_ntsc/nes_ntsc-sys/: Cargo.toml  build.rs  lib.rs
nes_ntsc/src/: lib.rs
src/: #main.rs#  lib.rs  main.rs
src/nes/: Cargo.toml  apu.rs  bus.rs  cartridge.rs  cpu.rs  debug.rs  default.pal  input.rs  lib.rs  memory.rs  mod.rs  nametables.rs  ops.rs  ppu.rs  system.rs
src/nes/channel/: dmc.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
src/nes/mapper/: axrom.rs  cnrom.rs  fme7.rs  mod.rs  nrom.rs  sxrom.rs  txrom.rs  uxrom.rs
src/nes/tests/: blargg_ppu_tests_2005.rs  nestest.rs
src/nes/tests/helper/: mod.rs
src/ui/: audio.rs  gamepad.rs  gfx.rs  mod.rs  ntsc.rs  sync.rs  window.rs
src/web/: Cargo.toml  README.md  makefile  package.json
src/web/src/: index.html  main.rs  worker.js
src/web/static/: index.html  main.js
tests/: blargg_apu_2005.rs  branch_timing_tests.rs  cpu_timing_test6.rs  sprite_hit_tests_2005.rs  sprite_overflow_tests.rs
tests/helper/: mod.rs
web/: Cargo.toml
web/src/: lib.rs
web/static/: index.html  main.js
web/static/roms/: romlist.txt
xtask/: Cargo.toml
xtask/src/: main.rs
