[package]
name = "mass_nes"
version = "0.1.0"
edition = "2021"
authors = ["Nick Massey <nickmass@nickmass.com>"]

[dependencies]
blip_buf = "0.1"
clap = { version = "4.5", features = ["derive"] }
cpal = { version = "0.15", features = ["jack"] }
crossbeam = "0.8"
nes = { path = "nes" }
nes_ntsc = { path = "nes_ntsc", version = "0.1"}
glium = { git = "https://github.com/nickmass/glium.git", features = ["simple_window_builder"] }
gilrs = "0.10"

[profile.dev]
opt-level = 1
