[package]
name = "debugger"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blip_buf-rs = "0.1"
bytemuck = "1.18.0"
crossbeam = "0.8.4"
eframe = { version = "0.29.1", features = ["persistence"] }
nes = { path = "../nes" }
rfd = "0.15.0"
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tracy = { version = "0.11.1", features = [
    "only-localhost",
    "ondemand",
] }
tracy-client = "0.17.3"
tracy-ext = { path = "../tracy-ext" }
ui = { path = "../ui", features = ["egui"] }
