[package]
name = "debugger"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
ui = { path = "../ui", features = ["egui"] }

[dependencies]
blip_buf-rs = "0.1"
bytemuck = "1.18.0"
crossbeam = "0.8.4"
eframe = { version = "0.31.0", features = ["persistence"] }
nes = { path = "../nes", features = ["serde", "debugger", "save-states"] }
rfd = "0.15.0"
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ui = { path = "../ui", features = ["egui"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-tracy = { version = "0.11.1", features = [
    "only-localhost",
    "ondemand",
] }
tracy-client = "0.18.0"
tracy-ext = { path = "../tracy-ext" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "0.3"
gloo = { version = "0.11", features = ["futures"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-tracing = "1.0.1"
web-worker = { path = "../web-worker" }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.70"
features = [
    "HtmlCanvasElement",
    "MessageEvent",
    "Performance",
    "WorkerGlobalScope",
    "Worker",
    "WorkerType",
    "WorkerOptions",
    "DedicatedWorkerGlobalScope",
]
