[package]
name = "mass_nes"
version = "0.1.0"
edition = "2021"
authors = ["Nick Massey <nickmass@nickmass.com>"]

[dependencies]
blip_buf-rs = "0.1"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
nes = { path = "../nes" }
glium = { git = "https://github.com/nickmass/glium.git", features = [
    "simple_window_builder",
] }
ui = { path = "../ui" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tracy = { version = "0.11.1", features = [
    "only-localhost",
    "ondemand",
] }
tracy-client = "0.17.3"
