[package]
name = "desktop"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blip_buf-rs = "0.1"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
nes = { path = "../nes" }
glium = { git = "https://github.com/nickmass/glium.git", features = [
    "simple_window_builder",
] }
ui = { path = "../ui" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tracy = { version = "0.11.1", features = [
    "only-localhost",
    "ondemand",
] }
tracy-client = "0.17.3"
tracy-ext = { path = "../tracy-ext" }
bytemuck = "1.18.0"
