[package]
name = "desktop"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blip_buf-rs = "0.1"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
nes = { path = "../nes" }
glium = { git = "https://github.com/glium/glium.git", rev = "7c541983dcc5c1d516225559129ac9a27e9af4e8", features = [
    "simple_window_builder",
] }
ui = { path = "../ui", features = ["pipewire"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tracy = { version = "0.11.1", features = [
    "only-localhost",
    "ondemand",
] }
tracy-client = "0.18"
tracy-ext = { path = "../tracy-ext" }
bytemuck = "1.18.0"
