[package]
name = "nes-derive"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.77"
bitcode = { version = "0", features = ["derive"], default-features = false }
