[package]
name = "nes-traits"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_arrays = { version = "0.2.0" }
nes-derive = { path = "../nes-derive" }
postcard = { version = "1.0.10", features = ["alloc"] }
