[package]
name = "nes"
version = "0.1.0"
edition = "2021"
authors = ["Nick Massey <nickmass@nickmass.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
tracing = "0.1.40"
nes-traits = { path = "../nes-traits" }
serde = { version = "1.0.210", features = ["derive"] }

[features]
default = ["debugger"]
debugger = []
