[package]
name = "nes"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tracing = "0.1.40"
nes-traits = { path = "../nes-traits", optional = true }
serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_arrays = { version = "0.2.0", optional = true }

[features]
default = ["debugger", "save-states"]
debugger = []
save-states = ["serde", "serde_arrays", "nes-traits"]
