[package]
name = "ui"
version = "0.1.0"
edition = "2021"
authors = ["Nick Massey <nickmass@nickmass.com>"]

[dependencies]
nes = { path = "../nes", default-features = false }
gilrs = "0.10.9"
winit = "0.30.5"
bytemuck = "1.18.0"
const_format = "0.2.33"
nes-ntsc-rust = { path = "../nes-ntsc-rust" }
tracing = "0.1.40"
direct_ring_buffer = "0.2"
egui = { version = "0.29.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.15", features = ["wasm-bindgen"] }
