[package]
name = "ui"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
nes = { path = "../nes", default-features = false }
blip_buf = "0.1.5"
gilrs = "0.11.0"
winit = "0.30.5"
bytemuck = "1.18.0"
const_format = "0.2.33"
nes-ntsc-rust = { path = "../nes-ntsc-rust" }
tracing = "0.1.40"
direct_ring_buffer = "0.2"
egui = { version = "0.31.0", optional = true }
sha2 = "0.10.8"
zip = { version = "4.2.0", default-features = false }
byteorder = "1.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.16"
jack = { version = "0.13.2", optional = true }
pipewire = { version = "0.8.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4" }
base64 = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "AudioContext",
    "AudioWorklet",
    "Worklet",
    "AudioWorkletNodeOptions",
    "AudioWorkletNode",
    "AudioDestinationNode",
    "Storage",
    "Window",
]
