[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["Nick Massey <nickmass@nickmass.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
blip_buf-rs = "0.1"
bytemuck = "1.18.0"
byteorder = "1.5.0"
console_error_panic_hook = "0.1.7"
cpal = { version = "0.15", features = ["wasm-bindgen"] }
futures = "0.3"
gloo = { git = "https://github.com/JonasAlaif/gloo.git", branch = "spawn-options", features = [
    "worker",
    "futures",
] }
nes = { path = "../nes" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
ui = { path = "../ui" }
wasm-bindgen-futures = { version = "0.4" }
winit = { version = "0.30.5" }
tracing = { version = "0.1.40" }
tracing-wasm = "0.2.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
    "Performance",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlTexture",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    "WorkerGlobalScope",
    "Worker",
    "WorkerOptions",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "DedicatedWorkerGlobalScope",
]
