[package]
name = "web"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
blip_buf-rs = "0.1"
bytemuck = "1.18.0"
byteorder = "1.5.0"
console_error_panic_hook = "0.1.7"
cpal = { version = "0.15", features = ["wasm-bindgen"] }
futures = "0.3"
gloo = { version = "0.11", features = ["futures"] }
nes = { path = "../nes", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
ui = { path = "../ui" }
wasm-bindgen-futures = { version = "0.4" }
winit = { version = "0.30.5" }
tracing = { version = "0.1.40" }
tracing-wasm = "0.2.1"
direct_ring_buffer = "0.2"
crossbeam = "0.8.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
    "Performance",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlTexture",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    "WorkerGlobalScope",
    "Worker",
    "WorkerType",
    "WorkerOptions",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "DedicatedWorkerGlobalScope",
]
